--- a/aws/map.jinja
+++ b/aws/map.jinja
@@ -7,18 +7,9 @@
       'eip_enable_standby_mode': True,
       'eip_enable_failover_mode': False,
       'awslogs': {
-        'log_files': {
-          '/var/log/syslog': '/var/log/syslog',
-          '/var/log/kern.log': '/var/log/kern.log',
-          '/var/log/nginx': '/var/log/nginx/*.json',
-          '/var/log/upstart': '/var/log/upstart/*.log',
-          '/var/lib/docker/containers': '/var/lib/docker/containers/*/*.log',
-          '/var/lib/docker/aufs/mnt/': '/var/lib/docker/aufs/mnt/*/usr/src/app/log/production.log',
-          '/var/log/cron.log': '/var/log/cron.log',
-          '/var/log/stunnel_scanner.log': '/var/log/stunnel_scanner.log'
-        },
+        'log_files': {},
         'log_group_prefix': salt['grains.get']('aws:cloudformation:stack-name', delimiter='|'),
-        'log_stream_id_grain': 'aws_instance_id'
+        'log_stream_id_grain': 'id'
       }
     }
 }, grain='osfinger', merge=salt['pillar.get']('aws',{}), default='Default') %}
